--- a/Episode 01 ( inception )/index.html
+++ b/Episode 01 ( inception )/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
-    <div id="root"></div>
-    <script>
+    <h1>Hello Top of Root</h1>
+    <div id="root">
+        <h1>Faizan is Replace by root render or not !!</h1>
+    </div>
+    <h1>Hello Below of Root</h1>
+    <!-- <script>
         const heading = document.createElement("h1");
         heading.innerHTML = "Hello World from JavaScript";
 
         const root = document.getElementById("root");
         root.appendChild(heading);
-    </script>
+    </script> -->
+
+    <!-- why crossorgin is being used? -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!-- Order of this app js script is matter or not-->
+    <script src="./app.js"></script>
 </body>
+
 </html>
